# taskcom

./: .JSON.c.swp  .JSON.h.swp  .main.c.swp  .main.cpp.swp  .task.cpp.swo  .tasks.json.swo  .tasks.json.swp  CMakeLists.txt  README.md  a.out  data.json  main.c  main.cpp  task.cpp  task.hpp  test.c  utils.hpp
